--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -12,37 +12,40 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.2.3",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
     "@angular/core": "~10.2.0",
     "@angular/forms": "~10.2.0",
     "@angular/localize": "~10.2.0",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "@progress/kendo-angular-buttons": "^5.0.0",
+    "@progress/kendo-angular-common": "^1.0.0",
+    "@progress/kendo-angular-dateinputs": "^4.0.0",
+    "@progress/kendo-angular-dropdowns": "^4.0.0",
+    "@progress/kendo-angular-excel-export": "^3.0.0",
     "@progress/kendo-angular-grid": "^4.8.2",
+    "@progress/kendo-angular-inputs": "^6.0.0",
+    "@progress/kendo-angular-intl": "^2.0.0",
+    "@progress/kendo-angular-l10n": "^2.0.0",
+    "@progress/kendo-angular-pdf-export": "^2.0.0",
+    "@progress/kendo-angular-popup": "^3.0.0",
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-drawing": "^1.0.0",
+    "@progress/kendo-theme-default": "latest",
     "bootstrap": "^3.4.1",
     "jquery": "^3.5.1",
     "ng2-search-filter": "^0.5.1",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "@progress/kendo-angular-buttons": "^5.0.0",
-    "@progress/kendo-angular-common": "^1.0.0",
-    "@progress/kendo-angular-dropdowns": "^4.0.0",
-    "@progress/kendo-angular-inputs": "^6.0.0",
-    "@progress/kendo-angular-intl": "^2.0.0",
-    "@progress/kendo-angular-l10n": "^2.0.0",
-    "@progress/kendo-data-query": "^1.0.0",
-    "@progress/kendo-drawing": "^1.0.0",
-    "@progress/kendo-angular-excel-export": "^3.0.0",
-    "@progress/kendo-angular-dateinputs": "^4.0.0",
-    "@progress/kendo-angular-pdf-export": "^2.0.0",
-    "@progress/kendo-angular-popup": "^3.0.0",
-    "@progress/kendo-theme-default": "latest"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1002.0",
